Merge pull request #91
* Postgres Cleanup

* Add Annotation

* Remove NicknameSlashCommand

* Update DatabaseAction

* Cleanup

* Merge remote-tracking branch 'origin/main' into update/database+comma…